--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 authors = ["Archit Bhonsle <abhonsle2000@gmail.com>"]
-description = "Linear algebra accelerated by WebAssembly"
+description = "Linear algebra powered by WebAssembly"
 edition = "2018"
 keywords = ["linear algebra", "vector", "matrix", "machine learning", "ml"]
 license = "Apache-2.0"
-name = "linalg"
-repository = "https://github.com/ml-wasm/linalg"
-version = "0.1.7"
+name = "arrays-wasm"
+repository = "https://github.com/ArchitBhonsle/arrays.wasm"
+version = "0.1.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
